syntax = "proto3";
package palomachain.paloma.paloma;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/palomachain/paloma/v2/x/paloma/types";

message LightNodeClientActivation {
  string client_address = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  cosmos.base.v1beta1.Coin amount = 2 [ (gogoproto.nullable) = false ];
  google.protobuf.Timestamp created_at = 3
      [ (gogoproto.nullable) = false, (gogoproto.stdtime) = true ];
}
